--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,37 @@
 {
-    "name":			"directus/migrations",
-    "type":         "library",
-	"description":	"Framework for generating and managing database migrations",
-	"keywords":		["ruckusing", "rake", "migrations", "database", "mysql", "postgres", "task"],
-	"homepage":		"https://github.com/ruckus/ruckusing-migrations",
-    "license":		"MIT",
-	"authors":[
-		{
-			"name":"Cody Caughlan",
-			"email":"codycaughlan@gmail.com",
-			"homepage":"https://github.com/ruckus/ruckusing-migrations/wiki",
-			"role":"Project lead / Developer"
-		}
-	],
-	"support": {
-        "email":    "codycaughlan@gmail.com",
-        "issues":   "https://github.com/ruckus/ruckusing-migrations/issues",
-        "source":   "https://github.com/ruckus/ruckusing-migrations"
+  "name":     "directus/migrations",
+  "type":         "library",
+  "description":  "Framework for generating and managing database migrations",
+  "keywords":   ["ruckusing", "rake", "migrations", "database", "mysql", "postgres", "task"],
+  "homepage":   "https://github.com/ruckus/ruckusing-migrations",
+  "license":    "MIT",
+  "authors":[
+    {
+      "name":"Cody Caughlan",
+      "email":"codycaughlan@gmail.com",
+      "homepage":"https://github.com/ruckus/ruckusing-migrations/wiki",
+      "role":"Original Developer"
     },
-	"require":{
-		"php": ">=5.2.0"
-	},
-	"require-dev": {
-        "phpunit/phpunit": "3.7.*"
-    },
-    "version": "1.0.3",
-    "autoload": {
-        "psr-0": {
-            "Ruckusing": "lib/",
-            "Task": "lib/"
-        }
-    },
-	"bin":[
-		"ruckus.php"
-	]
+    {
+      "name":"Welling Guzman",
+      "email":"hola@wellingguzman.com",
+      "homepage":"https://github.com/wellingguzman/migrations"
+    }
+  ],
+  "require":{
+    "php": ">=5.2.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "3.7.*"
+  },
+  "version": "0.0.3",
+  "autoload": {
+    "psr-0": {
+      "Ruckusing": "lib/",
+      "Task": "lib/"
+    }
+  },
+  "bin":[
+    "ruckus.php"
+  ]
 }
